# jockey

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  acp-registry.latest.json  design_proposal.md  index.html  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.codex/environments/: environment.toml
docs/: acp_sdk_notes.md  acp_tasks.md  feature_git_context_panel.md  frontend_webview_best_practices.md  todo.md  ui_design_system_migration.md
docs/acp_references/: README.md  aionui.md  best_practices.md  zed.md
docs/completed/: agent_orchestrator_design.md  completed_tasks.md  data_modeling_best_practices.md
docs/pending/: pending_tasks.md
memory/: MEMORY.md  project_deadlock_debug.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  assistant.rs  chat.rs  error.rs  fs_context.rs  lib.rs  main.rs  parser.rs  runtime_kind.rs  types.rs
src-tauri/src/acp/: adapter.rs  client.rs  connection.rs  error.rs  metrics.rs  mod.rs  runtime_state.rs  session.rs  worker.rs
src-tauri/src/acp/session/: cold_start.rs  execute.rs  mcp.rs  mod.rs  prewarm.rs  session_cmds.rs
src-tauri/src/acp/worker/: handlers.rs  mod.rs  notify.rs  permission.rs  pool.rs  types.rs
src-tauri/src/chat/: context_bundle.rs  prompt_builder.rs  session_runtime.rs
src-tauri/src/commands/: assistant_cmd.rs  catalog_cmd.rs  completion.rs  context_cmd.rs  cwd_util.rs  fallback_cmd.rs  fs_cmd.rs  git_cmd.rs  mod.rs  query_cmd.rs  role_templates.rs  runtime_cmd.rs  session_context_cmd.rs  shell_cmd.rs  terminal_cmd.rs  workspace_cmd.rs
src-tauri/src/conductor_mcp/: mod.rs  protocol.rs  tools.rs
src-tauri/src/db/: app_session.rs  app_session_role.rs  context.rs  global_mcp.rs  mod.rs  pool.rs  role.rs  rule.rs  session.rs  session_context.rs  skill.rs  workflow.rs
src-tauri/src/git/: branches.rs  diff.rs  error.rs  forge.rs  history.rs  mod.rs  remote.rs  status.rs  write.rs
src-tauri/src/jockey_mcp/: bridge.rs  mod.rs
src-tauri/src/jockey_mcp/handlers/: context.rs  mod.rs  roles.rs  sessions.rs  skills.rs  workflows.rs
src/components/: ActivityBar.tsx  ChatInput.tsx  CommitPreviewContent.tsx  ComposerContextFooter.tsx  ConfigDrawer.tsx  ConversationCanvas.tsx  DiffView.tsx  DiffViewer.tsx  FileGlyph.tsx  FilesPanel.tsx  GitDiffModal.tsx  GitPanel.tsx  IdeAppIcon.tsx  ManagementPanel.tsx  MessageWindow.tsx  PermissionModal.tsx  PreviewArea.tsx  PreviewContent.tsx  QuickAddMcpModal.tsx  RichInput.tsx  SessionErrorBanner.tsx  SessionSidebar.tsx  SessionTabs.tsx  SettingsPage.tsx  StatusBar.tsx  TerminalPanel.tsx  ToolCallGroup.tsx  WorkspaceFilesPanel.tsx  WorkspaceHeader.tsx  types.ts
src/components/chrome/: SessionTopbar.tsx  WindowChrome.tsx
src/hooks/: useAcpEventListeners.ts  useAgentContext.ts  useAgentData.ts  useAppBootstrap.ts  useCompletions.ts  useGitChanged.ts  useGitPoller.ts  useInputHistory.ts  useKeyboardShortcuts.ts  useMentionCompletion.ts  useMessageSend.ts  useRunTokens.ts  useSessionManager.ts  useSlashCompletion.ts  useStreamEngine.ts
src/lib/: acpEventBridge.ts  acpEventBus.ts  chatPipeline.ts  codeHighlight.ts  configOptions.ts  conversationHelpers.ts  diffParser.ts  dockTabs.ts  fileVisual.ts  identicon.ts  layoutTokens.ts  markdown.ts  messageQueue.ts  previewTabs.ts  runToken.ts  sessionEventBuffer.ts  sessionHelpers.ts  streamSession.ts  tauriApi.ts  terminalRuntime.ts  theme.ts  uiPrefs.ts  useResize.ts  useTheme.ts  useToast.ts  workspaceApps.ts
(+27 files in other folders)
