[package]
name = "jockey"
default-run = "jockey"
version = "0.1.0"
description = "Jockey desktop orchestrator"
authors = ["jockey"]
edition = "2021"
license = "MIT"
repository = "https://github.com/recailai/jockey"

[lib]
name = "jockey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_model"] }
base64 = "0.22"
async-trait = "0.1.89"
dashmap = "6.1.0"
dirs = "6"
futures = "0.3"
ignore = "0.4"
libc = "0.2"
nucleo-matcher = "0.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.50.0", features = ["io-util", "macros", "net", "process", "sync", "time", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
which = "8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
